k8s/bc-backend.yaml
# Spring Boot应用部署配置
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bc-backend
  namespace: bc-backend
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: bc-backend
  template:
    metadata:
      labels:
        app: bc-backend
    spec:
      containers:
      - name: bc-backend
        image: ghcr.io/bigchuang2024/bc-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 5

        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
---
# Spring Boot应用服务配置
apiVersion: v1
kind: Service
metadata:
  name: bc-backend
  namespace: bc-backend
spec:
  selector:
    app: bc-backend
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 31458
  type: NodePort
