k8s/redis.yaml
# Redis缓存服务部署
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: bc-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis/redis-stack:7.4.0-v8
        ports:
        - containerPort: 6379
#        resources:
#          requests:
#            memory: "256Mi"
#            cpu: "100m"
#          limits:
#            memory: "512Mi"
#            cpu: "250m"
---
# Redis服务配置
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: bc-backend
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
